--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -16,7 +16,7 @@
       {% if site.github.is_project_page %}
         <a href="{{ site.github.repository_url }}" class="btn">View on GitHub</a>
       {% endif %}
-        <a href="./Eikonal_solver/README.html" class="btn">Eikonal solver</a>
+        <a href="/eikonal.html" class="btn">Eikonal solver</a>
         <a href="{{ site.github.tar_url }}" class="btn">Download .tar.gz</a>
     </section>
 
