--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -16,8 +16,9 @@
       {% if site.github.is_project_page %}
         <a href="{{ site.github.repository_url }}" class="btn">View on GitHub</a>
       {% endif %}
-        <a href="{{site.baseurl}}/eikonal.html" class="btn">Eikonal solver</a>
-        <a href="{{ site.github.tar_url }}" class="btn">Download .tar.gz</a>
+        <!--<a href="{{site.baseurl}}/eikonal.html" class="btn">Eikonal solver</a>-->
+        <a href="{{site.baseurl}}/wild.html" class="btn">Wild solution gifs</a>
+        <a href="{{site.baseurl}}/plane.html" class="btn">Plane wave gifs</a>
     </section>
 
     <section class="main-content">
