--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <section class="page-header">
-      <a href="{{site.baseurl}}"> <h1 class="project-name">{{ site.title | default: site.github.repository_name }}</h1></a>
+      <a href="{{site.baseurl}}"> <div class="project-name"><h1 >{{ site.title | default: site.github.repository_name }}</h1></div> </a>
       <h2 class="project-tagline">{{ site.description | default: site.github.project_tagline }}</h2>
       {% if site.github.is_project_page %}
         <a href="{{ site.github.repository_url }}" class="btn">View on GitHub</a>
