--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -19,7 +19,8 @@
         <!--<a href="{{site.baseurl}}/eikonal.html" class="btn">Eikonal solver</a>-->
         <a href="{{site.baseurl}}/wild.html" class="btn">Wild solution gifs</a>
         <a href="{{site.baseurl}}/plane.html" class="btn">Plane wave gifs</a>
-        <a href="{{site.baseurl}}/img.html" class="btn">Images</a>
+        <a href="{{site.baseurl}}/img.html" class="btn">Wild solution images</a>
+        <a href="{{site.baseurl}}/eikonal.html" class="btn">Eikonal images</a>
     </section>
 
     <section class="main-content">
