add images for eikonal

--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -16,7 +16,7 @@
       {% if site.github.is_project_page %}
         <a href="{{ site.github.repository_url }}" class="btn">View on GitHub</a>
       {% endif %}
-        <!--<a href="{{site.baseurl}}/eikonal.html" class="btn">Eikonal solver</a>-->
+        <!--<a href="{{site.baseurl}}/theory.html" class="btn">Theory (pdf)</a>-->
         <a href="{{site.baseurl}}/wild.html" class="btn">Wild solution gifs</a>
         <a href="{{site.baseurl}}/plane.html" class="btn">Plane wave gifs</a>
         <a href="{{site.baseurl}}/img.html" class="btn">Wild solution images</a>
